[package]
name = "concat_strs"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
concat_strs_impl = { path = "../impl" }
proc-macro-hack = "0.5"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "concat"
harness = false
