[package]
name = "concat_strs_impl"
version = "1.0.1"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"
description = "Implementation for the concat_strs crate."
repository = "https://github.com/9999years/concat_strs"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.15"
proc-macro-hack = "0.5"
